--- a/module_11/10_apostrophes.html
+++ b/module_11/10_apostrophes.html
@@ -200,7 +200,7 @@
               	<div class="row mt-3 mb-3">
 					<!--Card Primary-->
 					<div class="col-xs-6 col-sm-6">
-						<div class="card light-blue z-depth-2 p-3" style="height: 320px;">
+						<div class="card fourth-bg text-white z-depth-2 p-3" style="height: 320px;">
 						  <div class="card-block">
 							<p>How do we combine the plural ‘s’ on the owners with the possessive ‘s’? Place the apostrophe <em>after</em> the plural ‘s’ and delete the possessive ‘s’:
 							<ul>
@@ -234,7 +234,7 @@
 					<li>The businesses’ taxes were increased. </li>
 				</ul></p>
                 <div>
-					<div class="card brown darken-3 text-white z-depth-2 p-3">
+					<div class="card prime-bg text-white z-depth-2 p-3">
 						<div class="card-block">
 						<p>We never use apostrophes to indicate simple plural forms. Each of the following examples illustrates the correct use of a plural ‘s’.
 							<ul>
