--- a/module_12/04_Point-Form_Style.html
+++ b/module_12/04_Point-Form_Style.html
@@ -44,7 +44,7 @@
     <div class="col-sm-12 content">
       <h1>Using Point-Form Style</h1>
 			<p>Point-form style varies from the style that you will use for writing your final paper. Which characteristics of point-form style can you spot in the following sample?</p>
-			<div class="card card-block accent-4 z-depth-2 p-3 mt-3 mb-5">
+			<div class="card card-block z-depth-2 p-3 mt-3 mb-5">
            <h3 style="text-align: center;">A. Reasons Krispy Kreme’s First expansion into Canada Failed</h3>
 			  <h4>Reason #1: High Costs</h4>
 			  <p><strong>Topic Sentence:</strong> Krispy Kreme’s First attempt to expand into Canada failed due to unexpectedly high costs<br>
