--- a/module_12/05_activity_create_outline.html
+++ b/module_12/05_activity_create_outline.html
@@ -42,7 +42,7 @@
   <div class="col-sm-12 content">
     <h1><i class="fal fa-pencil-alt fa-lg text-second fa-pull-left" aria-hidden="true"></i><span class="sr-only">Activity: </span>Create an Outline</h1>
   <p>Take the following paragraph and create an outline for it. The paragraph belongs in a report that attempts to answer: “What kind of impact smart technology is having on the modern home.”</p>
-  <div class="col col-sm-12 cyan lighten-5 z-depth-1 p-4">
+  <div class="col col-sm-12 z-depth-1 p-4">
   	<p>Although it’s easy to see how the technological innovations of the last ten years have made North American homes more efficient, it’s also important to understand how they’ve made homes safer. Recent movies and news coverage would suggest that smart technology used in the home has actually made our homes more vulnerable to attack. However, this impression is false. Around-the-clock news coverage forces media producers to constantly search for headline-worthy stories. When they promote extraordinary incidents, viewers often assume that these incidents are in fact occurring regularly. But according to Time magazine reporter Kelly Conniff (2014), “Of the millions of Americans who own at least one connected device, only a small fraction has come forward as victims of malicious home-gadget attacks” (para. 3).  Data like this suggest that, despite what media reports might suggest, the smart technology in people’s homes is actually quite safe. In fact, three kinds of smart technology in particular are really saving lives: security systems, fire and carbon monoxide detectors, and — surprisingly — lighting systems.</p>
   </div>
   <div class="clearfix"></div>
