--- a/module_12/08_intro_conclude.html
+++ b/module_12/08_intro_conclude.html
@@ -54,9 +54,9 @@
         <p>Optional: Review our first exploration of introductory paragraphs in Week 5: <a href="">insert quicklink to topic: Introductory Paragraphs</a></p>
         <p>Review the following student examples of an outline for an introductory paragraph. Notice how the student plans to draw in the reader.</p>
         <!--Card Primary-->
-        <div class="card pink accent-2 text-white z-depth-2 p-3 mb-3">
+        <div class="card accent-4 z-depth-2 p-3 mb-3">
           <div class="card-block">
-            <h5 class="text-white"><em>Trades and Apprenticeship</em></h5>
+            <h5><em>Trades and Apprenticeship</em></h5>
             <p><strong>Research question:</strong> What are the best ways to fix squeaky stairs?<br><strong>Thesis statement:</strong> Squeaky stairs can be fixed from underneath the stairs or from above<br><strong>Introductory information:</strong>
             <ul>
             <li>cause of squeaking: wood rubbing against another piece of wood</li>
@@ -71,7 +71,7 @@
           </div>
         </div>
         <!--/.Card Primary-->
-        <div class="card light-blue accent-2 z-depth-2 p-3 mb-3">
+        <div class="card accent-2 text-white z-depth-2 p-3 mb-3">
           <div class="card-block">
             <h5><em>Engineering & IT</em></h5>
             <p><strong>Research question:</strong> What characteristics should a consumer look for in selecting the best intelligent personal assistant? <br><strong>Thesis statement:</strong> To identify the best voice assistant on the market, a consumer should consider: the accuracy of the assistant’s response to search queries, the source of the assistant’s information, and the clarity of the assistant’s delivery.<br><strong>Introductory information:</strong>
@@ -114,7 +114,7 @@
         <p>Optional: Review our first exploration of concluding paragraphs in Week 5: <a href="">insert quicklink to topic: Concluding Paragraphs</a></p>
         <p>Review the following student examples of an outline for a concluding section. Notice how the student leaves the reader with coming trends.</p>
         <!--/.Card Primary-->
-        <div class="card accent-4 z-depth-2 p-3">
+        <div class="card second-bg text-white z-depth-2 p-3">
           <div class="card-block">
             <h5><em>Engineering & IT</em></h5>
             <p><strong>Research question:</strong> Could a cryptocurrency such as Bitcoin become a viable functioning currency? <br><strong>Thesis:</strong> Cryptocurrencies like Bitcoin meet the three criteria of currency: medium of exchange, unit of account, store of value<br><strong>Conclusion:</strong>
