--- a/module_11/02_writing_outlines.html
+++ b/module_11/02_writing_outlines.html
@@ -44,7 +44,7 @@
         <p>An effective outline contains all of your own ideas and all of the information that you need to support your ideas, and it is arranged in a way that will allow you to write your paper more easily and more effectively.</p>
         <p>Remember how you asked a question in your proposal. This week we will discuss how to move from the question on the proposal to a purpose or a thesis statement and an outline. Here is an example of a question from a proposal about the expansion of Krispy Kreme into the Canadian market.</p>
         <!--Card Primary-->
-        <div class="card accent-2 text-white z-depth-2 p-3 mb-3">
+        <div class="card accent-4 z-depth-2 p-3 mb-3">
           <div class="card-block">
             <p>Original question (from proposal): Will Krispy Kreme’s new expansion into the Canadian market be profitable enough to allow the business to survive long-term in Canada?</p>
           </div>
@@ -52,9 +52,9 @@
         <p>While this question is headed in the right direction, it needs improvement because it can be answered with only a yes or no. With feedback from the teacher, the student has revised the question to ask: Why did Krispy Kreme fail in its first attempt at expansion and what lessons were learned.</p>
         <p>Let’s look at the final purpose statement and the outline for the Krispy Kreme expansion research paper, which builds on the points in the purpose statement. The student identified three reasons for Krispy Kreme’s failure and the outline provides support for each reason.</p>
         <!--/.Card Primary-->
-        <div class="card accent-4 z-depth-2 p-3 mb-3">
+        <div class="card prime-bg text-white z-depth-2 p-3 mb-3">
           <div class="card-block">
-            <h4>Outline</h4>
+            <h4 class="text-white">Outline</h4>
             <p><ul>
             <li>the causes of Krispy Kreme’s failed expansion into Canada:
             <ul>
