--- a/module_11/09_colons_semi-colons.html
+++ b/module_11/09_colons_semi-colons.html
@@ -44,7 +44,7 @@
         <h3>Colon</h3>
         <p>Use a colon at the end of a complete statement to introduce any of the following:</p>
         <div class="row">
-        <div class="col-sm-10 card accent-4 p-3 mb-3" style="margin: auto;">
+        <div class="col-sm-10 card accent-2 text-white p-3 mb-3" style="margin: auto;">
         <ul style="list-style: none;">
         	<li>
         		<div class="col-sm-4 pull-left"><strong>A list</strong></div>
@@ -67,7 +67,7 @@
         <h3>Semi-colon</h3>
         <p>“Semi-colons separate things. Most commonly, they separate two main clauses that are closely related to each other but that could stand on their own as sentences if you wanted them to.” (Mignon Fogarty aka Grammar Girl, Semi-colons, <a href="http://www.quickanddirtytips.com/education/grammar/semicolons">“Use semi-colons to separate things and add variety”)</a></p>
         <div class="row">
-        <div class="col-sm-10 card pink darken-2 text-white p-3" style="margin: auto;">
+        <div class="col-sm-10 card prime-bg text-white p-3" style="margin: auto;">
         <ul style="list-style: none;">
         	<li>
         		<div class="col-sm-7 pull-left">To replace a period, a semi colon can appear between independent clauses that are closely related in meaning.</div>
