--- a/module_12/03_outline_research.html
+++ b/module_12/03_outline_research.html
@@ -45,7 +45,7 @@
       <h1>From Outline to Research Paper</h1>
       <p>The outline you prepare should include all of the information and ideas that your final paper will need, but it shouldn’t be written in the same style as your final paper. Instead of linking together sentences and paragraphs, you will use a condensed version of writing called “point-form” style. This style is likely familiar to you as the style that you use to take notes in class. It’s a helpful way to write quickly without sacrificing any important meaning.</p>
       <p>We will see this week how an outline contains all the major details that lead ultimately to a research paper. Look at the comparison between the writing in this outline and the way the same ideas are represented in the final paper.</p>
-      <div class="card-block blue lighten-5 p-3 mt-3">
+      <div class="card-block prime-bg text-white p-3 mt-3">
       <p><strong>Krispy Kreme’s Failed Expansion into Canada and How it Plans to Rise Again: Outline Research Question: </strong>Why did Krispy Kreme fail in its first attempt at expansion and what lessons were learned?</p>
       <p><strong>Purpose Statement:</strong> The purpose of this report is to investigate the causes of Krispy Kreme’s failed expansion into Canada from 2001 to 2005, how the business plans to re-enter the Canadian market and achieve success and sustainability, and the threats that Krispy Kreme faces in this business operation.</p>
       </div>
@@ -67,22 +67,22 @@
         </div>
       </div>
       <!--/.Accordion wrapper-->
-      <div class="card-block blue lighten-5 p-3 mt-3">
-      <h3 style="text-align: center;">A. Reasons Krispy Kreme’s First expansion into Canada Failed</h3>
-      <h4>Reason #1: High Costs</h4>
+      <div class="card-block prime-bg text-white p-3 mt-3">
+      <h3 class="text-white" style="text-align: center;">A. Reasons Krispy Kreme’s First expansion into Canada Failed</h3>
+      <h4 class="text-white">Reason #1: High Costs</h4>
       <p><strong>Topic Sentence:</strong> Krispy Kreme’s First attempt to expand into Canada failed due to unexpectedly high costs<br>
       <strong>Explanation, proof, or example:</strong><ul>
       	<li>Stores were too expensive to operate &rarr; high upkeep and real estate costs</li>
       	<li>Stores were too big &rarr; around 5000 square feet each (Harris, 2016)</li>
       	<li>Stores were too expensive &rarr; cost up to 2-3 million dollars to open (Shaw, 2016).</li>
       </ul></p>
-      <h4>Reason #2: Poor Sales</h4>
+      <h4 class="text-white">Reason #2: Poor Sales</h4>
       <p><strong>Topic Sentence:</strong> Krispy Kreme’s first attempt to expand into Canada failed due to sales peaking early, resulting in overproduction amid rapid expansion.<br>
       <strong>Explanation, proof, or example:</strong><ul>
       	<li>Sales of donuts were high at beginning &rarr; not enough to justify costs over time (Wright, 2017). </li>
       	<li>Sales declined after its first few years in Canada.</li>
       </ul></p>
-      <h4>Reason #3: Misunderstanding of the Market</h4>
+      <h4 class="text-white">Reason #3: Misunderstanding of the Market</h4>
       <p><strong>Topic Sentence:</strong> Krispy Kreme’s First attempt to expand into Canada failed due to a poor understanding of the Canadian market.<br>
       <strong>Explanation, proof, or example:</strong><ul>
       	<li>Canadians do not eat as many donuts as KK believed</li>
@@ -113,21 +113,21 @@
         </div>
       </div>
       <!--/.Accordion wrapper-->
-      <div class="card-block blue lighten-5 p-3 mt-3">
-      <h3 style="text-align: center;">B. Keys to a Successful Canadian Expansion</h3>
-      <h4>Key to Success #1: Limiting Factory Outlets</h4>
+      <div class="card-block prime-bg text-white p-3 mt-3">
+      <h3 class="text-white" style="text-align: center;">B. Keys to a Successful Canadian Expansion</h3>
+      <h4 class="text-white">Key to Success #1: Limiting Factory Outlets</h4>
       <p><strong>Topic Sentence:</strong> KK plans to successfully expand into the Canada by limiting its factory outlets to a small percentage of its total stores.<br>
       <strong>Explanation, proof, or example:</strong><ul>
       	<li>Open as few factory outlets as possible and only increase with low real estate costs (Wright, 2017) &rarr; this will avoid high start-up and operating costs</li>
       	<li>Lowering expenses &rarr; will help KK respond to unexpectedly high or low sales in other types of stores which will not produce their own donuts (Wright, 2017)</li>
       </ul></p>
-      <h4>Key to Success #2: Using a Café Model</h4>
+      <h4 class="text-white">Key to Success #2: Using a Café Model</h4>
       <p><strong>Topic Sentence:</strong> Krispy Kreme plans to successfully expand into the Canada by relying primarily on a café-style store model.<br>
       <strong>Explanation, proof, or example:</strong><ul>
       	<li>Noticed that donut companies in Canada succeed under a café type business model &rarr; emphasizes selling coffee, providing a meeting place to consumers, more than just selling donuts (Wright, 2017).</li>
       	<li>Believes this new format has a lot of potential (CBC, 2016).</li>
       </ul></p>
-      <h4>Key to Success #3: Exploiting Brand Power</h4>
+      <h4 class="text-white">Key to Success #3: Exploiting Brand Power</h4>
       <p><strong>Topic Sentence:</strong> Krispy Kreme plans to successfully expand into the Canada by exploiting its brand power.<br>
       <strong>Explanation, proof, or example:</strong><ul>
       	<li>Massive growth in recent years &rarr; defying expectations and tripling price of shares</li>
@@ -158,9 +158,9 @@
           </div>
         </div>
       </div><!--Accordion wrapper-->
-      <div class="card-block blue lighten-5 p-3 mt-3">
-      <h3 style="text-align: center;">C. Challenges Facing Krispy Kreme’s Expansion into Canada</h3>
-      <h4>Challenge #1: Outside Core Competency</h4>
+      <div class="card-block prime-bg text-white p-3 mt-3">
+      <h3 class="text-white" style="text-align: center;">C. Challenges Facing Krispy Kreme’s Expansion into Canada</h3>
+      <h4 class="text-white">Challenge #1: Outside Core Competency</h4>
       <p><strong>Topic Sentence:</strong> Krispy Kreme has little experience running café-style shops on a large scale, so the company will be operating outside of its core competency.<br>
       <strong>Explanation, proof, or example:</strong><ul>
       	<li>Always relied on its ability to sell donuts to its customers right off the production line &rarr; maximum freshness</li>
@@ -168,7 +168,7 @@
       	<li>Krispy Kreme has not yet proven it can run on a large scale </li>
       	<li>New model comes with new challenges &rarr; logistics of shipping donuts from store-to-store and selling large quantities of coffee</li>
       </ul></p>
-      <h4>Challenge #2: Crowded Market</h4>
+      <h4 class="text-white">Challenge #2: Crowded Market</h4>
       <p><strong>Topic Sentence:</strong> Canada has the most donut shops in the world per capita, making the country’s donut market extremely fierce and competitive (CBC, 1994).<br>
       <strong>Explanation, proof, or example:</strong><ul>
       	<li>Canada’s donut market does not have much room left to grow</li>
@@ -201,8 +201,8 @@
           </div>
         </div>
       </div><!--Accordion wrapper-->
-      <div class="card-block blue lighten-5 p-3 mt-3">
-      <h3 style="text-align: center;">D. Conclusion</h3>
+      <div class="card-block prime-bg text-white p-3 mt-3">
+      <h3 class="text-white" style="text-align: center;">D. Conclusion</h3>
       <ul>
       	<li>Krispy Kreme made mistakes in first attempt to expand into Canada </li>
       	<li>Can learn from its past failures and implement &rarr; can replicate some of its American success in America</li>
