--- a/module_10/02_reason_for_doing_research.html
+++ b/module_10/02_reason_for_doing_research.html
@@ -227,7 +227,7 @@
           </div>
         </div>
         <!-- Modal --> 
-        
+		  <h2>INSERT REFLECTION BOX</h2>
       </div>
      <div class="clearfix"></div>
       <div class="citation mt-5">
@@ -270,7 +270,7 @@
 <!-- Chart JS --> 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.bundle.js"></script> 
 <script>
-    var datafilename = "poll_multi_important-review.json";  
+    var datafilename = "poll_multi_reasons_for_doing_research.json";  
   </script> 
 <script src="../facilitator_tools/Polling/_js/thirdpartylib/global-superagent-d2l-session-auth.js"></script> 
 <script src="../facilitator_tools/Polling/_js/thirdpartylib/csval-lib.js"></script> 
