interactive diagram fix for multi

--- a/module_11/06_outlines_and _report_style.html
+++ b/module_11/06_outlines_and _report_style.html
@@ -50,7 +50,7 @@
         <h2>Purposes</h2>
         <p>To learn about some of the advantages to using a report style for informational, analytical, or persuasive writing, click each title.</p>
 
-		<div class="col-sm-12 top-md mt-3 mb-5" style="min-height: 600px;">
+		<div class="col-sm-12 top-md mt-3" style="min-height: 600px;">
           <div id="dnext"></div>
         </div>
        
@@ -87,7 +87,7 @@
       </div>
        <h2>Professional Sectors</h2>
        <p>Report style is common across many different fields or sectors of the workforce. Learn more about where report style can be used in various professional sectors by clicking each title.</p>
-       <div class="col-sm-12 top-md mt-3 mb-5" style="min-height: 600px;">
+       <div class="col-sm-12 top-md mt-3" style="min-height: 600px;">
           <div id="dnext2"></div>
         </div>
       </div>
@@ -124,9 +124,9 @@
 <!-- OLC Custom JS --> 
 <script src="../js/plugins/olc-custom.js"></script>
 <script>
-		var datafilename = "diagramnext_outline_report_style.json";
+		var datafilename = "diagramnext_outline_report_style_multi.json";
 	</script> 
-<script src="../facilitator_tools/DiagramNext/js/diagramnext.js"></script>
+<script src="../facilitator_tools/DiagramNext/js/diagramnext_multi.js"></script>
 <script>
   function heightMatch(idMatch, idResize) {
     $('#'+idResize).outerHeight($('#'+idMatch).outerHeight());
