--- a/module_10/03_research_paper_process_timeline.html
+++ b/module_10/03_research_paper_process_timeline.html
@@ -29,7 +29,7 @@
   <div class="container-fluid">
 
 <!-- Header Area -->
-<header id="think">
+<header>
     <div class="row">
       <div class="col-sm-12 prime-bg header z-depth-1-half">
 				<div class="headerMod"></div>
