--- a/module_10/06_refine_your_research.html
+++ b/module_10/06_refine_your_research.html
@@ -62,7 +62,10 @@
               </ul><em>To learn more about each pitfall and how to avoid it, click on each title below.</em></p>
          <!--/.Accordion wrapper-->
          <div class="accordion mt-5" id="accordion" role="tablist" aria-multiselectable="true">
-        <div class="pull-right small"><a title="expand all" class="openall text-second"><span class="text-small">Expand all</span> <i class="far fa-plus-square core-four-font"></i></a> / <a title="close all" class="closeall text-second"><span class="text-small">Collapse all</span> <i class="far fa-minus-square core-four-font"></i></a></div>
+        <div class="pull-right small"><a title="expand all" class="openall text-second"><span
+            class="text-small">Expand all</span> <i class="far fa-plus-square core-four-font"></i></a> / <a
+            title="close all" class="closeall text-second"><span class="text-small">Collapse all</span> <i
+            class="far fa-minus-square core-four-font"></i></a></div>
         <div class="clearfix"></div>
         <div class="clearfix"></div>
         <div class="card hoverable">
@@ -206,7 +209,8 @@
 <script src="../js/plugins/open_close_all.js"></script> 
 
 <!-- OLC Custom JS --> 
-<script src="../js/plugins/olc-custom.js"></script> 
+<script src="../js/plugins/olc-custom.js"></script>
+
 <script src="../facilitator_tools/VideoPlus/js/videoplusEngine.js"></script> 
 <script type="text/javascript">
 		$(document).ready(function() {
