--- a/module_10/07_proposal_email.html
+++ b/module_10/07_proposal_email.html
@@ -27,7 +27,7 @@
 <div class="container-fluid"> 
   
   <!-- Header Area -->
-  <header>
+  <header id="reflection">
     <div class="row">
       <div class="col-sm-12 prime-bg header z-depth-1-half">
         <div class="headerMod"></div>
