--- a/module_10/11_eval.html
+++ b/module_10/11_eval.html
@@ -73,7 +73,7 @@
 						<p><span class="circle-number accent-2 pull-left mr-2 mt-1">2</span>Narrow this topic or issue by focusing on a particular research question that you would like to answer in your final research assignment.</p>
 						<p><span class="circle-number accent-2 pull-left mr-2 mt-1">3</span>Use the LRC databases to find materials that will help you to answer your question.</p>
 						<p><span class="circle-number accent-2 pull-left mr-2 mt-1">4</span>Use the email format that was laid out in week 10’s content to present your research question. This template will help you to ensure that you are providing your instructor with a clear and detailed outline of your plan.<ul>
-							<li>Use the template in <a href="">insert quicklink to topic page: The Proposal Email</a>, but <strong>do not copy whole phrases.</strong></li>
+							<li>Use the template in <a href="07_proposal_email.html"> topic page: The Proposal Email</a>, but <strong>do not copy whole phrases.</strong></li>
 							<li>Use 12-point Arial font.</li>
 						</ul></p>
 						<p><span class="circle-number accent-2 pull-left mr-2 mt-1">5</span>Revise your email to ensure it reads clearly and that it follows the rubric, the assignment instructions, and the resources provided in eConestoga in week 10.</p>
