--- a/module_09/04_models_for_self-reflection.html
+++ b/module_09/04_models_for_self-reflection.html
@@ -43,7 +43,7 @@
 <main>
   <div class="container">
     <div class="col-sm-12 content">
-      <h1>Models for Self-Reflection</h1>
+      <h1><i class="fal fa-question-circle fa-lg text-second fa-pull-left"></i>Models for Self-Reflection</h1>
       <div class="mt-3">
         <p>Now that we’ve established the purpose — the <em>why</em> — of self-reflection, our focus shifts to asking <em>how</em>:  How can we narrow our focus? How can we organize the process?</p>
         <p>This topic page describes four different methods or models for self-reflection (WriteOnline.ca and University of Waterloo’s Centre for Teaching Excellence). Although this week’s Feedback Journal assignment asks you to present your reflections in a specific way, you should think of these models as tools that you can use throughout your academic and professional career to help you reflect on the various situations you might encounter. To learn more about each model, click the title below.</p>
