--- a/module_09/09_google_vs_online_database.html
+++ b/module_09/09_google_vs_online_database.html
@@ -51,6 +51,10 @@
             <div id="vidpreview"></div>
             <div id="ytplayer"></div>
           </div>
+          <div id="vpcontain2">
+            <div id="vidpreview2"></div>
+            <div id="ytplayer2"></div>
+          </div>
         </div>
               <p class="mt-2">For the type of projects that you need to complete for your courses at Conestoga, using online databases provides the resources that are needed for success. This video summarizes the three advantages to using Conestoga’s LRC.</p>
           <div class="clearfix"></div>
