--- a/module_09/10_midentifying_reliable_sources.html
+++ b/module_09/10_midentifying_reliable_sources.html
@@ -57,17 +57,17 @@
         <div class="clearfix"></div>
         <div class="card hoverable">
           <div class="card-header" role="tab" id="headingOne"><a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-            <h2 class="mb-0 p-3"> Library Resources <i class="fa fa-angle-down rotate-icon"></i></h2></a>
+            <h2 class="mb-0 p-3"><i class="fal fa-video text-second pr-2" aria-hidden="true"></i> Library Resources <i class="fa fa-angle-down rotate-icon"></i></h2></a>
           </div>
           <div id="collapseOne" class="collapse" role="tabpanel" aria-labelledby="headingOne">
             <div class="card-block">
               <p>Materials that you acquire through the library databases can be considered reliable and trustworthy, as they have all gone through various processes of editing and selection. However, it is important still to understand what kind of text you are reading in order to evaluate how relevant or useful the material is for you own purpose.</p>
 			  <p>To learn more about the five types of academic sources and how each deals with different topics in different styles, <strong>watch this video</strong>, then review the scenarios that follow in the next section and select the best resource for the project.</p>
-			  <div class="bottom-space">
-				  <div id="vpcontain">
-					<div id="vidpreview"></div>
-					<div id="ytplayer"></div>
-				  </div></div>
+			  <div class="col col-xs-12 col-md-7 no-gutters mb-4" style="margin: auto;">
+			    <div class="well no-gutters p-1 z-depth-1">
+				  <iframe width="100%" height="315" src="https://www.youtube.com/embed/3Q-NhkYbFOg?rel=0" class="flex" frameborder="0" allowfullscreen></iframe>
+				</div>
+			  </div>
             </div>
           </div>
         </div>
@@ -101,12 +101,17 @@
           </div>
           <div class="card hoverable">
           <div class="card-header" role="tab" id="headingThree"><a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-            <h2 class="mb-0 p-3"> Internet Resources <i class="fa fa-angle-down rotate-icon"></i></h2></a>
+            <h2 class="mb-0 p-3"><i class="fal fa-video text-second pr-2" aria-hidden="true"></i> Internet Resources <i class="fa fa-angle-down rotate-icon"></i></h2></a>
           </div>
           <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree">
             <div class="card-block">
               <p>Of course, it’s also likely that we’ll want to include a search of the internet as we look for information. Using the LRC online databases can provide resources that are reliable and appropriate for college research, so evaluating the credibility of a website on the internet requires a more rigorous application of key concepts.</p>
               <p>To learn more about the four different types of websites on the internet and how to evaluate them, watch this video. Then, test your knowledge by answering the questions in the next section.</p>
+              <div class="col col-xs-12 col-md-7 no-gutters mb-4" style="margin: auto;">
+			    <div class="well no-gutters p-1 z-depth-1">
+				  <iframe width="100%" height="315" src="https://www.youtube.com/embed/x29CWA-uXdA?rel=0" class="flex" frameborder="0" allowfullscreen></iframe>
+				</div>
+			  </div>
             </div>
             </div>
           </div>
