--- a/module_09/10_midentifying_reliable_sources.html
+++ b/module_09/10_midentifying_reliable_sources.html
@@ -121,7 +121,24 @@
           </div>
           <div id="collapseFour" class="collapse" role="tabpanel" aria-labelledby="headingFour">
             <div class="card-block">
-              
+              <p>For the following scenarios, identify the best resource.</p>
+              <h3>Answer Options:</h3>
+			  <p><span class="badge accent-3" style="margin-right: 5px;">A</span> commercial<br>
+				<span class="badge accent-3" style="margin-right: 5px;">B</span> educational<br>
+				<span class="badge accent-3" style="margin-right: 5px;">C</span> governmental<br>
+				<span class="badge accent-3" style="margin-right: 5px;">D</span> informational</p>
+			  <div class="clearfix"></div>
+			  <div class="row">
+				<button class="btn btn-large prime-bg btn-check" id="submit-all" onclick="resetAll()">Reset Activity</button>
+				<table id="mi-table" class="table">
+				  <tr>
+					<th id="column-question">Scenario</th>
+					<th id="column-input">Option</th>
+					<th id="column-feedback">Feedback</th>
+					<th id="column-feedbackicon"></th>
+				  </tr>
+				</table>
+			  </div>
             </div>
             </div>
           </div>
@@ -135,7 +152,19 @@
               <p>It’s certainly a contentious topic throughout the academic world, with disagreement among and within professors and students.</p>
               <p>How much do you know about the credibility of Wikipedia? Take this quiz, and click on the links provided in the answers to better understand how Wikipedia works and why it might not be a suitable source for academic research.</p>
               <h3>Knowledge Check</h3>
-              
+              <p>Identify the truthfulness of the following statements about Wikipedia</p>
+			  <div class="clearfix"></div>
+			  <div class="row">
+				<button class="btn btn-large prime-bg btn-check" id="submit-all" onclick="resetAll()">Reset Activity</button>
+				<table id="mi-table" class="table">
+				  <tr>
+					<th id="column-question">Scenario</th>
+					<th id="column-input">Option</th>
+					<th id="column-feedback">Feedback</th>
+					<th id="column-feedbackicon"></th>
+				  </tr>
+				</table>
+			  </div>
             </div>
             </div>
           </div>
