--- a/module_13/08_eval.html
+++ b/module_13/08_eval.html
@@ -52,8 +52,8 @@
      			This is an individual assignment.</p>
       <div class="clearfix"></div>
       <div class="row mt-3">
-      <div class="col col-sm-6 info-color z-depth-1 p-4 mb-4" id="rationale" style="max-height: 400px;">
-				<h2 class="text-prime">Rationale</h2>
+      <div class="col col-sm-6 second-bg text-white z-depth-1 p-4 mb-4" id="rationale" style="max-height: 400px;">
+				<h2 class="text-white">Rationale</h2>
 				<p>Your purpose in this task is to complete your research project, which will include:</p>
 				<ul>
 					<li>Employing critical thinking to analyse source, voice, bias, meaning, argument, and evidence</li>
