--- a/module_14/03_eval.html
+++ b/module_14/03_eval.html
@@ -52,8 +52,8 @@
      			This is an individual assignment.</p>
       <div class="clearfix"></div>
       <div class="row mt-3">
-      <div class="col col-sm-6 info-color z-depth-1 p-4 mb-4" id="rationale" style="max-height: 400px;">
-				<h2 class="text-prime">Rationale</h2>
+      <div class="col col-sm-6 second-bg text-white z-depth-1 p-4 mb-4" id="rationale" style="max-height: 400px;">
+				<h2 class="text-white">Rationale</h2>
 				<p>This assignment is an opportunity to demonstrate your learning by:</p>
 				<ul>
 					<li>Identifying purpose, audience, and thesis in a variety of texts</li>
