--- a/module_09/12_preparing_to_search.html
+++ b/module_09/12_preparing_to_search.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Getting Started Using the Library</title>
+  <title>Preparing to Search</title>
 
   <!-- Font Awesome -->
   <link rel="stylesheet" href="../font/fontawesome/css/fontawesome-pro-brands.css">
@@ -45,7 +45,7 @@
 <main>
   <div class="container">
     <div class="col-sm-12 content">
-      <h1><i class="fal fa-video text-second pr-2" aria-hidden="true"></i>Getting Started Using the Library</h1>
+      <h1><i class="fal fa-video text-second pr-2" aria-hidden="true"></i>Preparing to Search</h1>
       <div class="mt-3">
         <p>The Library Resource Centre (LRC) has created videos to help you become experts in using their resources. Let’s start with the LRC’s website. To watch each short video and check your knowledge, click the titles below.</p>
       </div>
@@ -59,93 +59,63 @@
         <div class="clearfix"></div>
         <div class="card hoverable">
           <div class="card-header" role="tab" id="headingOne"><a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-            <h2 class="mb-0 p-3"> Where and How to Access Library Resources <i class="fa fa-angle-down rotate-icon"></i></h2></a>
+            <h2 class="mb-0 p-3"> Defining a Research Question and Doing Background Research <i class="fa fa-angle-down rotate-icon"></i></h2></a>
           </div>
           <div id="collapseOne" class="collapse" role="tabpanel" aria-labelledby="headingOne">
             <div class="card-block">
               <p>Watch this video and answer the question below.</p>
 			  <div class="col col-xs-12 col-md-7 no-gutters mb-4" style="margin: auto;">
 			    <div class="well no-gutters p-1 z-depth-1">
-				  <iframe width="100%" height="315" src="https://www.youtube.com/embed/NMJS3aJOt58?rel=0" class="flex" frameborder="0" allowfullscreen></iframe>
+				  <iframe width="100%" height="315" src="https://www.youtube.com/embed/tlrcFDh443g?rel=0" class="flex" frameborder="0" allowfullscreen></iframe>
 				</div>
 			  </div>
-          	  <p>Your instructor has posted the title of an article that is available in the LRC databases and suggested it would be useful to anybody who is writing their term project on that topic. You want to see the article, but you’re at home because it’s the long weekend. After you open the LRC’s website, and enter the title in the Library Search tool, you’re asked for your student number and PIN.</p>
-          	  <table id="mi-table" class="table">
-				<tr>
-				  <th id="column-question">Question</th>
-				  <th id="column-input">Answer</th>
-
-				  <th id="column-feedback">Feedback</th>
-				  <th id="column-feedbackicon"></th>
-				</tr>
-
-			  </table>
+          	  <p>Imagine this scenario:<br>
+          	  You’ve been asked to write a research paper on a topic of your own choosing. You’re in your first year of supply chain management, so you know it should be related to that field in some way, but beyond that you’re not quite sure what direction you want to pursue.</p>
+          	  <p>So you enter the keywords “Supply Chain Management” in the Library Search tool, and this is the result:</p>
           	  
             </div>
           </div>
         </div>
         <div class="card hoverable">
           <div class="card-header" role="tab" id="headingTwo"><a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-            <h2 class="mb-0 p-3"> Using a Variety of Resource Types  <i class="fa fa-angle-down rotate-icon"></i></h2></a>
+            <h2 class="mb-0 p-3"> Choosing Keywords and Brainstorming Synonyms <i class="fa fa-angle-down rotate-icon"></i></h2></a>
           </div>
           <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo">
             <div class="card-block">
-              <p>Watch this video and answer the question below.</p>
+              <p>Watch this video and answer the question at the end of the video.</p>
               <div class="col col-xs-12 col-md-7 no-gutters mb-4" style="margin: auto;">
 			    <div class="well no-gutters p-1 z-depth-1">
-				  <iframe width="100%" height="315" src="https://www.youtube.com/embed/9uS7xXODBg8?rel=0" class="flex" frameborder="0" allowfullscreen></iframe>
+				  <iframe width="100%" height="315" src="https://www.youtube.com/embed/Cu_N3cTdeAQ?rel=0" class="flex" frameborder="0" allowfullscreen></iframe>
 				</div>
 			  </div>
-			  <p>Match the following resource types to their appropriate icons.</p>
 			  </div>
           </div>
             </div>
           <div class="card hoverable">
           <div class="card-header" role="tab" id="headingThree"><a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-            <h2 class="mb-0 p-3"> Getting Started Searching <i class="fa fa-angle-down rotate-icon"></i></h2></a>
+            <h2 class="mb-0 p-3"> Finding Databases  <i class="fa fa-angle-down rotate-icon"></i></h2></a>
           </div>
           <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree">
             <div class="card-block">
-              <p>Watch this video and answer the questions within the video.</p>
-              <div class="bottom-space">
-				  <div id="vpcontain">
-					<div id="vidpreview"></div>
-					<div id="ytplayer"></div>
-				  </div>
-				</div>
-				<div style="height:200px">
-				  <div id="vpbullets1"></div>
-				  <div id="vpbullets2" style="margin-left:35px"></div>
-				  <div id="vpbullets3"></div>
-				</div>
-            </div>
-            </div>
-          </div>
-          <div class="card hoverable">
-          <div class="card-header" role="tab" id="headingFour"><a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-            <h2 class="mb-0 p-3"> Key Areas of the Library Website <i class="fa fa-angle-down rotate-icon"></i></h2></a>
-          </div>
-          <div id="collapseFour" class="collapse" role="tabpanel" aria-labelledby="headingFour">
-            <div class="card-block">
               <p>Watch this video and answer the question at the end of the video.</p>
-				 <div class="col col-xs-12 col-md-7 no-gutters mb-4" style="margin: auto;">
-					<div class="well no-gutters p-1 z-depth-1">
-					  <iframe width="100%" height="315" src="https://www.youtube.com/embed/S1_EFxZMe90?rel=0" class="flex" frameborder="0" allowfullscreen></iframe>
-					</div>
-				  </div>
-				  <p>Your initial search may have led you to discussions of your topic in newspapers and popular magazines, but now you want to get a perspective from professionals working within your field or industry.</p>
-				  <section id="dbox"></section>
+              <div class="col col-xs-12 col-md-7 no-gutters mb-4" style="margin: auto;">
+			    <div class="well no-gutters p-1 z-depth-1">
+				  <iframe width="100%" height="315" src="https://www.youtube.com/embed/I7L9HclPhws?rel=0" class="flex" frameborder="0" allowfullscreen></iframe>
+				</div>
 			  </div>
             </div>
             </div>
+          </div>
           </div>
         </div>
         <!--/.Accordion wrapper-->
         <div class="clearfix"></div>
         <div class="citation mt-5">
 		<p><strong>References:</strong><br>
-          Conestoga College Library Resource Centre. (2017, June 21). <a href="https://www.youtube.com/watch?v=cbwfsdACLVM"><em>Preparing – Getting Started Searching (2017).</em></a> [Video file]. Retrieved September 29, 2017.<br>
-          Conestoga College Library Resource Centre. (2017, August 28). <a href="https://www.youtube.com/watch?v=S1_EFxZMe90&feature=youtu.be"><em>Key Areas of the Library’s Website.</em></a> [Video file]. Retrieved September 29, 2017.</p></div>
+          Conestoga College Library Resource Centre. (2017, June 20). <a href="https://www.youtube.com/watch?v=tlrcFDh443g&feature=youtu.be"><em>Preparing – Defining a Research Question and Doing Background Research (2017).</em></a> [Video file]. Retrieved September 29, 2017.<br>
+          Conestoga College Library Resource Centre. (2017, May 5). <a href="https://www.youtube.com/watch?v=Cu_N3cTdeAQ&feature=youtu.be"><em>Choosing Keywords and Brainstorming (2017).</em></a> [Video file]. Retrieved September 29, 2017.<br>
+          Conestoga College Library Resource Centre. (2017, June 29). <a href="https://www.youtube.com/watch?v=I7L9HclPhws&feature=youtu.be"><em>Finding Databases – Part 2 – The Benefits of Searching Databases.</em></a> [Video file]. Retrieved September 29, 2017.<br>
+          Conestoga College Library Resource Centre. (2014, October 27). <a href="https://www.youtube.com/watch?v=x29CWA-uXdA&feature=youtu.be"><em>Preparing – Types of Resources, Part 2: Websites.</em></a> [Video file]. Retrieved September 29, 2017.</p></div>
     </div>
 </main>
 <!-- /Main Content Area -->
